Fri Feb 12 19:19:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.h:
        * ace/Containers_T.h:
          Doxygen changes

Fri Feb 12 17:39:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          2610 is working now

Fri Feb 12 14:05:21 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp: Fix unused variable warning.

Fri Feb 12 10:36:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-g++-common.h:
          Expanded autodetected support for GCC builtin __sync_XXX
          atomic op functions to the IA64 platform

Thu Feb 11 22:23:08 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * THANKS:

          Added Trent Nadeau <Trent dot Nadeau at ngc dot com> to the
          hall of fame.

Thu Feb 11 20:29:06 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * bin/MakeProjectCreator/config/global.features:

          Disabled wireshark feature by default.

Thu Feb 11 19:52:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * ace/config-g++-common.h:

          Expanded autodetected support for GCC builtin __sync_XXX
          atomic op functions to all powerpc platforms.

Thu Feb 11 12:18:24 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/Connector.cpp:
          Added a call to remove_reference() for a svc handler owned by
          non-blocking connection handler during connector's close().

        * ace/Svc_Handler.cpp:
          Removed the code that removes a reference to itself. Svc_Handler
          doesn't own that reference and thus shouldn't remove it.

        * tests/Bug_2609_Regression_Test.cpp:
        * tests/NonBlocking_Conn_Test.h:
        * tests/Bug_2610_Regression_Test.cpp:
        * tests/NonBlocking_Conn_Test.cpp:
          Fixed the tests that implicitly assumed ownership of a reference
          to a svc handler and didn't free it at the end of the test.
