@@ -1,3 +1,10 @@
+Sat Feb 13 15:59:26 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * ace/Unbounded_Set_Ex.h:
+
+          Added STL iterator type traits support to the ACE_Unbounded_Set*
+          and its corresponding iterators.
+
 Fri Feb 12 19:19:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Atomic_Op.h:
